--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
       "Tests\\": "tests/"
     },
     "files": [
-      "app/Helpers/Helpers.php"
+      "app/Helpers/Helpers.php",
+      "app/Helpers/TimelineHelper.php"
     ]
   },
   "scripts": {
